aligning fix?

--- a/styles.css
+++ b/styles.css
@@ -79,13 +79,13 @@ h1 {
         padding-bottom: 20px;
         flex-grow: 1;
         align-self: center;
-        text-align: center;
     }
 
         .image-text-flex .text-content .title {
             font-size: 30px; /* Size of the title */
             font-weight: bold; /* Make the title bold */
             margin-bottom: 10px; /* Space between title and subtitle */
+            text-align: center;
         }
 
         .image-text-flex .text-content .subtitle {
@@ -94,7 +94,6 @@ h1 {
             line-height: 1.5; /* Adjust line height for better readability */
             margin: 0;
             max-width: 400px;
-            width: 100%; /* Ensure it stays within the bounds of the max width */
             display: block;
             text-align: start;
         }
